不在支持 qjmap、qjtop、qjmxcli命令